# Molecular-Biology-Quiz

./: README.md
molecular-biology-quiz/: .gitignore  Cargo.toml
molecular-biology-quiz/quiz_saves/: quiz_cell_signaling_20250823_192804.json  quiz_cellular_respiration_20250823_192731.json
molecular-biology-quiz/src/: main.rs
molecular-biology-quiz/src/models/: mod.rs  question.rs
molecular-biology-quiz/src/quiz/: mod.rs  runner.rs  scoring.rs
molecular-biology-quiz/src/sections/: cell_division.rs  dna_rna.rs  gene_expression.rs  mod.rs  proteins.rs  respiration.rs  signaling.rs  techniques.rs
molecular-biology-quiz/src/ui/: colors.rs  display.rs  menu.rs  mod.rs
molecular-biology-quiz/src/utils/: file_handler.rs  mod.rs
