[package]
name = "molecular-biology-quiz"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "An interactive, colorful molecular biology quiz system"
license = "MIT"

[dependencies]
# Terminal UI and colors
crossterm = "0.27"
colored = "2.1"
termcolor = "1.4"

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random selection
rand = "0.8"

# Better error handling
anyhow = "1.0"

# Time handling for scoring
chrono = "0.4"

# Unicode support for symbols
unicode-width = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
